# rust-investments-tinkoff

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
examples/: build_contracts.rs  custom_api.rs  custom_interceptor.rs  server_side_stream.rs  simple.rs
src/: channel.rs  config.rs  datetime.rs  error.rs  lib.rs
src/api/: mod.rs
src/api/v1/: interceptor.rs  mod.rs
src/datetime/: error.rs  mod.rs
src/extensions/: metadata_ext.rs  mod.rs
