[package]
name = "investments-tinkoff"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Grapple228/rust-investments-tinkoff"
description = "Client for Tinkoff Investments Api"
authors = ["Grapple228"]
readme = "readme.md"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Tracing
tracing = "0.1"
#Other
derive_more = {version = "1", features = ["from"] }
tonic = {version = "0.12", features = ["tls", "tls-roots", "gzip"] }
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1", features = ["fast-rng", "v4"] }

[dev-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
